--- a/IAM/Frequently_asked_questions.mediawiki
+++ b/IAM/Frequently_asked_questions.mediawiki
@@ -3,7 +3,7 @@
 ==== '''Q''': ''What is Mozilla IAM?'' ====
 
 [https://github.com/mozilla-iam/mozilla-iam Mozilla IAM] stands for Mozilla's Identity and Access Management. It's the
-system that Mozilla manage logins to various web properties and systems.
+system that Mozilla manages logins to various web properties and systems.
 
 Usually, you'd use Mozilla IAM as Mozilla Staff, or as a contributor with access to the tools and resources Mozilla uses day to day.
 An example of that would be our Discourse instance: http://discourse.mozilla.org/
@@ -26,7 +26,7 @@ Example: LDAP uses two-factor authentication to verify a user's identity and is 
 ==== '''Q''': ''Why do you support email login ("passwordless") if it's less safe than other methods?'' ====
 
 Sometimes all you want to do is post a comment on a public forum. For that, we often need to provide a valid identity, but we also want to make it as easy as possible for you to contribute.
-Email login ("passwordless") is our current solution for this use case. Some applications we provide may not provide this login method, for example when the application always require more secure methods.
+Email login ("passwordless") is our current solution for this use case. Some applications we provide may not provide this login method, for example when the application requires more secure methods.
 
 ==== '''Q''': ''I would like access to specific groups, such as the NDA group, but it requires me to use a different login method, why?'' ====
 
@@ -75,7 +75,7 @@ Two-factor authentication can be configured by using a Time-based One-Time Passw
 
 ==== '''Q''': ''I have an email address for my mozillians account different than the email I set as primary in my github account. How can I upgrade my mozillians account from passwordless to github?'' ====
 
-#In the following steps we assume you have 2FA set for your github account. If not, see the steps for “How can I set up two-factor authentication (2FA) for my github account?” 
+#In the following steps we assume you have 2FA set for your github account. If not, see the steps for “How can I set up two-factor authentication (2FA) for my github account?”
 #Login to mozillians with your email
 #Navigate to profile settings page [[File:Mozillians_-_go_to_settings.png]]
 #Scroll down to “Profile Identities” section and click “Add Identity” button [[File:Mozillians_-_add_identity.png]]
@@ -90,7 +90,7 @@ Two-factor authentication can be configured by using a Time-based One-Time Passw
 
 #In the following steps we assume you have 2FA set for your github account. If not, see the steps for “How can I set up two-factor authentication (2FA) for my github account?”.
 #Navigate to mozillians page and click Log In/Sign Up button
-#Select “Log in with Github” method from mozillians login page [[File:Mozillians_-_login_ways.png]] 
+#Select “Log in with Github” method from mozillians login page [[File:Mozillians_-_login_ways.png]]
 #Enter Github credentials [[File:Mozillians_-_login_with_github_to_upgrade_account.png]]
 #Enter 2fa code from your application [[File:Mozillians_-_enter_2fa_code.png]]
 #Navigate to Settings -> Profile Identities section, and verify that Github is set as your login identity [[File:Mozillians_-_upgrade_to_github.png]]
